# ros2myo-test

./: .gitignore  requirements.txt  serv.txt
src/myo_classifier/: package.xml  setup.cfg  setup.py
src/myo_classifier/config/: cfg.yaml
src/myo_classifier/launch/: collect.launch.py  run.launch.py
src/myo_classifier/myo_classifier/: experiment.py  gesture_recorder.py  manager.py  myo_cnn.py  myo_rf.py  myo_rf_game.py  myo_stream.py  myo_svm.py
src/myo_classifier/myo_classifier/common/: feature_extraction.py
src/myo_classifier/myo_classifier/games/: game_cnn_lstm.py  game_rf.py  game_svm.py
src/myo_classifier/myo_classifier/train/: cnn_lstm.py  cnn_lstm_cli.py  data.py  rf.py  svm.py
src/myo_msgs/: CMakeLists.txt  package.xml
src/myo_msgs/srv/: AddGesture.srv  TrainModel.srv
src/myo_space_trigger/: package.xml  setup.cfg  setup.py
src/myo_space_trigger/launch/: run_emg.launch.py
src/myo_space_trigger/msg/: MyoMsg.msg
src/myo_space_trigger/myo_space_trigger/: EMG_2048.py  gesture_classifier.pkl  myo_listener.py  myo_rf.py  myo_rf_msg.py  myo_stream.py  myo_stream_msg.py  myo_subscriber.py  testing_data_fe.csv  train_rf.py  training_data_fe.csv
src/myo_space_trigger/resource/: gesture_classifier.pkl
