<?xml version="1.0"?>
<package format="3">
  <name>myo_msgs</name>
  <version>0.0.1</version>
  <description>Interfaces for Myo-based EMG/IMU streaming</description>
  <maintainer email="hans.lomboy1206@gmail.com">hanex</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Interface deps -->
  <depend>builtin_interfaces</depend>

  <!-- Runtime for generated code -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- REQUIRED for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
